--- a/home.html
+++ b/home.html
@@ -333,6 +333,111 @@
         </div>
       </section>
 
+      <section class="news">
+        <div class="container">
+          <div class="news__inner">
+            <h2 class="news__title">Tin tức</h2>
+            <p class="news__desc">
+              L nulla facilisis at vero eros et accumsan et iusto odio dignissim
+              qui blandit praesent luptatum zzril delenit augue duis dolore te
+              feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer
+              adipiscing
+            </p>
+            <div class="news__list">
+              <!-- item 1 -->
+              <div class="news-item">
+                <a href="#!">
+                  <img
+                    src="./assets/images/news1.jpg"
+                    alt="news"
+                    class="news__img"
+                  />
+                </a>
+                <div class="news-row">
+                  <span class="news__category">Lorem ipsum</span>
+                  <span class="news__date">
+                    <img src="./assets/icons/calendar.svg" alt="calendar" />
+                    <date>28 - 10- 2021</date>
+                  </span>
+                </div>
+                <h3 class="news-item__title">
+                  <a href="#!"
+                    >Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                    elit</a
+                  >
+                </h3>
+                <p class="news-item__desc">
+                  Dolor sit amet, cons ectetuer adipiscing elit, sed diam in on
+                  nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+                  erat volutpat. Ut wisi enim...
+                </p>
+              </div>
+              <!-- item 2 -->
+              <div class="news-item">
+                <a href="#!">
+                  <img
+                    src="./assets/images/news2.jpg"
+                    alt="news"
+                    class="news__img"
+                  />
+                </a>
+                <div class="news-row">
+                  <span class="news__category">Lorem ipsum</span>
+                  <span class="news__date">
+                    <img src="./assets/icons/calendar.svg" alt="calendar" />
+                    <date>28 - 10- 2021</date>
+                  </span>
+                </div>
+                <h3 class="news-item__title">
+                  <a href="#!">
+                    Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                    elit</a
+                  >
+                </h3>
+                <p class="news-item__desc">
+                  Dolor sit amet, cons ectetuer adipiscing elit, sed diam in on
+                  nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+                  erat volutpat. Ut wisi enim...
+                </p>
+              </div>
+              <!-- item 3 -->
+              <div class="news-item">
+                <a href="#!">
+                  <img
+                    src="./assets/images/news3.jpg"
+                    alt="news"
+                    class="news__img"
+                  />
+                </a>
+                <div class="news-row">
+                  <span class="news__category">Lorem ipsum</span>
+                  <span class="news__date">
+                    <img src="./assets/icons/calendar.svg" alt="calendar" />
+                    <date>28 - 10- 2021</date>
+                  </span>
+                </div>
+                <h3 class="news-item__title">
+                  <a href="#!"
+                    >Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                    elit</a
+                  >
+                </h3>
+                <p class="news-item__desc">
+                  Dolor sit amet, cons ectetuer adipiscing elit, sed diam in on
+                  nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+                  erat volutpat. Ut wisi enim...
+                </p>
+              </div>
+            </div>
+
+            <a href="#!" class="news__more"
+              >Xem thêm
+              <img src="./assets/icons/chevron-right.svg" alt="chevron-right" />
+            </a>
+          </div>
+        </div>
+      </section>
+
       <section class="quality">
         <div class="quality-bg"></div>
 
@@ -496,6 +601,53 @@
           </div>
         </div>
       </section>
+
+      <form action="" class="form">
+        <div class="container">
+          <div class="form__inner">
+            <figure class="form__media">
+              <img
+                src="./assets/images/form-01.png"
+                alt="form__img"
+                class="form__img"
+              />
+            </figure>
+            <div class="form__action">
+              <p class="form__message">
+                Bạn có bất kì thắc mắc nào. <br />
+                Hãy để lại tin nhắn cho chúng tôi nhé!
+              </p>
+              <div class="form-row">
+                <input
+                  type="text"
+                  class="form__input"
+                  placeholder="Tên của bạn"
+                />
+              </div>
+              <div class="form-row">
+                <input
+                  type="text"
+                  class="form__input form__short"
+                  placeholder="Email"
+                />
+                <input
+                  type="text"
+                  class="form__input form__short"
+                  placeholder="Số điện thoại"
+                />
+              </div>
+              <div class="form-row">
+                <textarea
+                  class="form__input form__big"
+                  placeholder="Nội dung"
+                ></textarea>
+              </div>
+
+              <button class="form__submit">Gửi</button>
+            </div>
+          </div>
+        </div>
+      </form>
     </main>
 
     <footer class="footer">
