--- a/home.html
+++ b/home.html
@@ -138,6 +138,10 @@
               class="header-icon"
             />
           </div>
+
+          <labal class="bars"
+            ><img src="./assets/icons/bars.svg" alt="bars"
+          /></labal>
         </div>
       </div>
     </header>
