--- a/home.html
+++ b/home.html
@@ -105,6 +105,8 @@
             ><img src="./assets/logo/logo.png" alt="logo" class="logo"
           /></a>
 
+          <input type="checkbox" id="menu" class="menu" hidden />
+
           <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item active">
@@ -139,9 +141,10 @@
             />
           </div>
 
-          <labal class="bars"
+          <label for="menu" class="bars"
             ><img src="./assets/icons/bars.svg" alt="bars"
-          /></labal>
+          /></label>
+          <label for="menu" class="bg"></label>
         </div>
       </div>
     </header>
